--- a/estilo.css
+++ b/estilo.css
@@ -1,25 +1,160 @@
-html{
-
-    background-color: #9e1919;
+* {
+  padding: 0;
+  margin: 0;
+  font-family: Helvetica;
+  box-sizing: border-box;
 }
-header{
-    background-color:#184B44;
-    width:110%;
-    margin: auto auto auto auto;
-} 
-.topicos{
 
-    display: inline-block;
-    margin-left: 10%;
-    margin-right: 10%;
-    background-color: red;
-    border-radius: 50%;
+/* Cabeçalho */
+header {
+  background-color: darkslategray;
+  text-align: center;
+  padding: 15px;
+  color: aliceblue;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
-footer{
-       background-color:#3E3935;
-        position: fixed;
-        padding: 10px 0px 0px 10px;
-        bottom: 0;
-        width: 100%;
-        height: 40px;
+/* Menu */
+
+a{
+  text-decoration: none;
+  display: block;
+  padding: 20px 5px;
+  color: black;
+}
+
+a:hover{
+  background-color: #392D2D;
+  color: #965329;
+  border-radius: 10px;
+  transition: background .5s;
+}
+
+label{
+background-color: darkslategray;
+padding: 15px;
+position: absolute;
+}
+
+ul{
+  position: absolute;
+  top: 80px;
+  width: 100px;
+  border-radius: 10px;
+  background-color: darkslategray;
+}
+
+label img {
+  width: 40px;
+}
+
+input[type="checkbox"]{
+  display: none;
+}
+
+nav{
+  width: 350px;
+  height: 50px;
+  left: -350px;
+  position: absolute;
+  transition: all .5s;
+}
+
+input[type="checkbox"]:checked ~ nav{
+  transform: translateX(350px);
+}
+
+/* Grid de noticia */
+.container {
+  background-color: rgb(196, 195, 195);
+  min-height: 60vh;
+  padding: 20px;
+}
+
+.products-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.card {
+  width: 31%;
+  min-width: 275px;
+  margin: 1% 1%;
+  display: inline-block;
+  padding: 1px;
+}
+
+.product-image {
+  height: 300px;
+  width: 100%;
+  margin-bottom: 6px;
+  background-position: center;
+  background-size: cover;
+}
+
+#img-1 {
+  background-image: url('https://media.istockphoto.com/vectors/ancient-greek-mythology-gods-and-goddesses-characters-icon-set-vector-id958303918');
+}
+
+#img-2 {
+  background-image: url('');
+}
+
+#img-3 {
+  background-image: url('');
+}
+
+#img-4 {
+  background-image: url('');
+}
+
+#img-5 {
+  background-image: url('');
+}
+
+#img-6 {
+  background-image: url('');
+}
+
+h3 {
+  margin-bottom: 10px;
+  color: darkslategray;
+  font-size: 24px;
+}
+
+.card p {
+  margin-bottom: 10px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.btn {
+  display: block;
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: darkslategray;
+  color: rgb(196, 195, 195);
+  padding: 15px;
+  border-radius: 10px;
+  
+}
+
+.btn:hover {
+  background-color: #392D2D;
+  transition: background .3s;
+}
+
+/* Rodapé */
+footer {
+  background-color: rgb(12, 29, 29);
+  text-align: center;
+  padding: 80px;
+  color: rgb(148, 137, 137);
 }
