--- a/assunto5.css
+++ b/assunto5.css
@@ -1,160 +1,166 @@
 * {
-    padding: 0;
-    margin: 0;
-    font-family: Helvetica;
-    box-sizing: border-box;
-  }
-  
-  /* Cabeçalho */
-  header {
-    background-color: darkslategray;
-    text-align: center;
-    padding: 15px;
-    color: aliceblue;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  }
-  /* Menu */
-  
-  a{
-    text-decoration: none;
-    display: block;
-    padding: 20px 5px;
-    color: black;
-  }
-  
-  a:hover{
-    background-color: #392D2D;
-    color: #965329;
-    border-radius: 10px;
-    transition: background .5s;
-  }
-  
-  label{
+  padding: 0;
+  margin: 0;
+  font-family: Helvetica;
+  box-sizing: border-box;
+}
+
+/* Cabeçalho */
+header {
+  background-color: darkslategray;
+  text-align: center;
+  padding: 15px;
+  color: aliceblue;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+/* Menu */
+
+a {
+  text-decoration: none;
+  display: block;
+  padding: 20px 5px;
+  color: black;
+}
+
+a:hover {
+  background-color: #392D2D;
+  color: #965329;
+  border-radius: 10px;
+  transition: background .5s;
+}
+
+label {
   background-color: darkslategray;
   padding: 15px;
   position: absolute;
   right: 10vw;
-  }
-  
-  ul{
-    position: absolute;
-    top: 80px;
-    width: 70px;
-    border-radius: 10px;
-    background-color: darkslategray;
-  }
-  
+}
+
+ul {
+  position: absolute;
+  top: 80px;
+  width: 100px;
+  border-radius: 10px;
+  background-color: darkslategray;
+}
+
+label img {
+  width: 40px;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+nav {
+  width: 350px;
+  height: 50px;
+  left: -350px;
+  position: fixed;
+  transition: all .5s;
+}
+
+input[type="checkbox"]:checked~nav {
+  transform: translateX(350px);
+}
+
+/* Grid de noticia */
+.container {
+  background-color: rgb(196, 195, 195);
+  min-height: 60vh;
+  padding: 20px;
+}
+
+
+
+.card {
+  width: 31%;
+  min-width: 275px;
+  margin: 1% 1%;
+  display: inline-block;
+  padding: 1px;
+}
+
+h3 {
+  margin-bottom: 10px;
+  color: darkslategray;
+  font-size: 24px;
+}
+
+.card p {
+  margin-bottom: 10px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.btn {
+  display: block;
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: darkslategray;
+  color: rgb(196, 195, 195);
+  padding: 15px;
+  border-radius: 10px;
+
+}
+
+.btn:hover {
+  background-color: #392D2D;
+  transition: background .3s;
+}
+
+/* Rodapé */
+footer {
+  background-color: rgb(12, 29, 29);
+  text-align: center;
+  padding: 80px;
+  color: rgb(148, 137, 137);
+}
+
+#cavalo {
+  float: left;
+  width: 25%;
+  margin-right: 3vw;
+}
+
+.logo {
+  width: 10%;
+  height: 10%;
+}
+
+h1 {
+  font-size: 8vw;
+  white-space: 2%;
+  font-family: 'Cormorant SC', serif;
+}
+
+p {
+  padding-top: 10px;
+  font-size: 2vw;
+  font-family: 'Cormorant SC', serif;
+}
+
+@media screen and (max-width: 768px) {
   label img {
-    width: 40px;
+    width: auto;
+    height: 16px;
   }
-  
-  input[type="checkbox"]{
-    display: none;
-  }
-  
-  nav{
-    width: 350px;
-    height: 50px;
-    left: -350px;
+}
+
+@media screen and (max-width: 425px) {
+  label img {
+    width: auto;
+    height: 10px;
     position: absolute;
-    transition: all .5s;
+    top: -20;
   }
-  
-  input[type="checkbox"]:checked ~ nav{
-    transform: translateX(350px);
-  }
-  
-  /* Grid de noticia */
-  .container {
-    background-color: rgb(196, 195, 195);
-    min-height: 60vh;
-    padding: 20px;
-  }
-  
+}
 
-  
-  .card {
-    width: 31%;
-    min-width: 275px;
-    margin: 1% 1%;
-    display: inline-block;
-    padding: 1px;
-  }
-
-  h3 {
-    margin-bottom: 10px;
-    color: darkslategray;
-    font-size: 24px;
-  }
-  
-  .card p {
-    margin-bottom: 10px;
-  }
-  
-  .bold {
-    font-weight: bold;
-  }
-  
-  .btn {
-    display: block;
-    width: 100%;
-    text-align: center;
-    text-transform: uppercase;
-    text-decoration: none;
-    background-color: darkslategray;
-    color: rgb(196, 195, 195);
-    padding: 15px;
-    border-radius: 10px;
-    
-  }
-  
-  .btn:hover {
-    background-color: #392D2D;
-    transition: background .3s;
-  }
-  
-  /* Rodapé */
-  footer {
-    background-color: rgb(12, 29, 29);
-    text-align: center;
-    padding: 80px;
-    color: rgb(148, 137, 137);
-  }
-    #cavalo{
-    float: left;
-    width: 25%;
-    margin-right: 3vw;
-  }
-  .logo{
-    width: 10%;
-    height: 10%;
-  }
-
-  h1{
-    font-size:8vw;
-    white-space: 2%;
-    font-family: 'Fira Sans', sans-serif;
-  }
-
-  p{
-    padding-top: 10px;
-    font-size:2vw;
-    font-family: 'Fira Sans', sans-serif;
-  }
-  @media screen and (max-width: 768px){
-    label img {
-      width: auto;
-      height: 16px;
-    }
-  }
-  @media screen and (max-width: 425px){
-    label img {
-      width: auto;
-      height: 10px;
-      position: absolute;
-      top: -20;
-    }
-  }
 /* Sobre */
 .about {
   width: 100%;
@@ -171,7 +177,7 @@
   height: 600px;
   background: #7070703b;
   margin: 0 auto;
-  border-radius: 8px;
+  border-radius: 3%;
   z-index: 10;
   padding: 10px;
   display: flex;
@@ -212,12 +218,78 @@
   text-align: right;
   color: #392D2D;
 }
+
 #cavalo {
-  border-radius:20%;
+  border-radius: 20%;
   box-shadow: 10px 5px 5px black;
 }
-.thor{
+
+#cima {
+  background-color: #965329;
+  opacity: 0.5;
+  font-size: 2vw;
+  width: 3vw;
+  position: fixed;
+  bottom: 3%;
+  right: 1%;
+  border-radius: 20%;
+}
+
+.thor {
   margin-left: 20%;
   width: 50vw;
   height: 30vw;
+  border-radius: 5%;
+}
+
+.reinos {
+  width: 50%;
+  height: 50%;
+  border-radius: 5%;
+  box-shadow: 10px 5px 5px black;
+  margin-left: 20%;
+}
+
+@media screen and (max-width:1250px) {
+  .responsavel {
+    font-size: 2vw;
+  }
+
+  #responsaveldois {
+    font-size: 2vw;
+  }
+
+  #responsaveltres {
+    font-size: 2vw;
+  }
+
+  #responsavelquatro {
+    font-size: 2vw;
+  }
+}
+
+#igreja {
+  padding-left: 20vw;
+}
+
+table,
+th,
+td {
+  border: 1px solid black;
+  font-family: 'Cormorant SC', serif;
+  font-size: 2vw;
+}
+
+table {
+  width: 100%;
+  height: 5vh;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  
+}
+
+td,
+th {
+  background-color: rgba(99, 41, 41, 0.459);
+  font-size: large;
 }
