--- a/estilo.css
+++ b/estilo.css
@@ -185,6 +185,10 @@ footer {
 }
 
 #esteregg:hover {
-
   opacity: 0.2;
+}
+
+#home{
+  background-color: rgb(57, 133, 133);
+  border-radius: 10%;
 }
