--- a/assunto5.css
+++ b/assunto5.css
@@ -297,3 +297,7 @@ th {
   background-color: rgb(57, 133, 133);
   border-radius: 10%;
 }
+#quiz{
+  background-color: rgb(57, 133, 133);
+  border-radius: 10%;
+}
