--- a/estilo.css
+++ b/estilo.css
@@ -128,7 +128,7 @@ input[type="checkbox"]:checked~nav {
 }
 
 #img-6 {
-  background-image: url('https://ae01.alicdn.com/kf/Hf819940a684f409e9a59b5865bade49e2/Traje-viking-medieval-larp-vestido-t-nico-masculino-camisa-longa-cavaleiros-nobre-roupa-estilo-armadura-para.jpg_Q90.jpg_.webp');
+  background-image: url('https://ae01.alicdn.com/kf/Hf819940a684f409e9a59b5865bade49e2/Traje-viking-medieval-larp-vestido-t-nico-masculino-camisa-longa-cavaleiros-nobre-roupa-estilo-armadura-para.jpg_Q90.jpg');
   border-radius: 15%;
   box-shadow: 10px 5px 5px grey;
 }
